--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ display: flex; align-items: center;
         <ul id="page-link">
          <ul class="gnavi">
       <li><a href="#area-2"><div class="left">
-    <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス100.jpg">
+    <img src="https://github.com/Ikumi19372/momo/commit/ebd4d88679dc375e38dfb658f3f5661a2da85c94#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
     <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26666438_s.jpg">
