--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ display: flex; align-items: center;
         <ul id="page-link">
          <ul class="gnavi">
       <li><a href="#area-2"><div class="left">
-    <img src="https://github.com/Ikumi19372/momo/commit/ebd4d88679dc375e38dfb658f3f5661a2da85c94#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
+    <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス100.jpg">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
     <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26666438_s.jpg">
@@ -101,10 +101,10 @@ display: flex; align-items: center;
       <img src="\C:\Users\ootsu\OneDrive\デスクトップ\images\22841312_s.jpg"> 
     </div><span>活動場所</span></a></li>
       <li><a href="#area-5"><div class="left">
-      <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
+      <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\1220963.jpg">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
-      <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
+      <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26381062_s (1).jpg">
     </div><span>大会記録</span></a></li>
     </ul></ul> 
  
@@ -177,6 +177,5 @@ display: flex; align-items: center;
 
 </body>
 </html>
-
 		
 
