--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ display: flex; align-items: center;
       <img src="\C:\Users\ootsu\OneDrive\デスクトップ\images\22841312_s.jpg"> 
     </div><span>活動場所</span></a></li>
       <li><a href="#area-5"><div class="left">
-      <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\1220963.jpg">
+      <img src="images/1220963.jpg">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
       <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26381062_s (1).jpg">
