--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ display: flex; align-items: center;
         <ul id="page-link">
          <ul class="gnavi">
       <li><a href="#area-2"><div class="left">
-    <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス100.jpg">
+    <img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9100.jpg?raw=true">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
     <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26666438_s.jpg">
