--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ display: flex; align-items: center;
       <img src="images/1220963.jpg">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
-      <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26381062_s (1).jpg">
+      <img src="images/26381062_s (1).jpg">
     </div><span>大会記録</span></a></li>
     </ul></ul> 
  
