--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ display: flex; align-items: center;
       <img src="images/1220963.jpg">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
-      <img src="images/26381062_s (1).jpg">
+      <img src="https://github.com/Ikumi19372/momo/blob/main/images/26381062_s%20(1).jpg?raw=true">
     </div><span>大会記録</span></a></li>
     </ul></ul> 
  
