--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ display: flex; align-items: center;
       <img src="https://github.com/Ikumi19372/momo/blob/main/images/23484319_s.jpg?raw=true"> 
     </div><span>活動場所</span></a></li>
       <li><a href="#area-5"><div class="left">
-      <img src="images/1220963.jpg">
+      <img src="https://github.com/Ikumi19372/momo/blob/main/images/1220963.jpg?raw=true">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
       <img src="https://github.com/Ikumi19372/momo/blob/main/images/26381062_s%20(1).jpg?raw=true">
