--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ display: flex; align-items: center;
     <img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9100.jpg?raw=true">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
-    <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26666438_s.jpg">
+    <img src="https://github.com/Ikumi19372/momo/blob/main/images/26666438_s.jpg?raw=true">
    </div><span>活動時間</span></a></li>
       <li><a href="#area-4"> <div class="left">
       <img src="https://github.com/Ikumi19372/momo/blob/main/images/23484319_s.jpg?raw=true"> 
