--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ display: flex; align-items: center;
 		<p>現時点での自分たちの課題を見つめることで、どのような練習が必要か部員から意見をまとめ、</p>
 		<p>個人としてもチームとしても向上を目指しています。このように自立した</p>
 		<p>活動をするとともに、自分が<span class="marker">部活動に打ち込める環境に対しての「感謝」を常に忘れません。</p></span><p>これらの成果として、地区・県大会を勝ち進み関東大会出場を目指しています。</p>
-		<div class="center"><img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス100-2.jpg"></div>
+		<div class="center"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9100-2.jpg?raw=true"></div>
 	<section class="area" id="area-2">
 		<h1 style="text-align:left">部員数</h1>
 		<p style="text-align:left">３年生　　10名（男子　10名、女子　０名）</p>
