--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ display: flex; align-items: center;
 
 		<h1 style="text-align:left">活動時間</h1>
 		 <p style="text-align:left"class="blurTrigger" >平日（放課後）　　　午後４時００分～６時００分頃<span class="marker">（日没を目安に変わります）</span></p>
-       <table><tr> <td><p style="text-align:left"class="blurTrigger">休日（祝祭日）　　　午前９時～１２時００分頃（午前中練習)<p style class="blurTrigger">　　　　　　　　　　午後１３時～１６時００分頃(午後練習)　　　　</p></p></td><td> <div class="right"><img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス６.jpg" alt = "テニス" align="middle"></div></td>
+       <table><tr> <td><p style="text-align:left"class="blurTrigger">休日（祝祭日）　　　午前９時～１２時００分頃（午前中練習)<p style class="blurTrigger">　　　　　　　　　　午後１３時～１６時００分頃(午後練習)　　　　</p></p></td><td> <div class="right"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%96.jpg?raw=true" alt = "テニス" align="middle"></div></td>
        </tr></table>
         <p style="text-align:left"class="blurTrigger">又は　　　　　　　　午前９時００分～午後４時００分頃（１日練習）</p>
         <p></p>
