--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ display: flex; align-items: center;
 		<a href="D:\slide2.html">・ソフトテニス部スライドショーはこちら</a></font>
 		<section class="area" id="area-6">
 		<h1 span class="marker" style="text-align:left">大会記録</h1>
-		<div class="center"><img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス101.png"></div>
+		<div class="center"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9101.png?raw=true"></div>
   <!--/main--></main>
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
