--- a/slide2.html
+++ b/slide2.html
@@ -10,11 +10,11 @@
   <body> 
   
   <div id="stage"><div style="text-align: center">
-    <div id="photo1" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%91%EF%BC%90.jpg?raw=true" width="200" height="200"></div>
-    <div id="photo2" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%96.jpg?raw=true" width="200" height="200"></div>
-    <div id="photo3" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%91%EF%BC%93.jpg?raw=true" width="200" height="200"></div>
-    <div id="photo4" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%91%EF%BC%91.jpg?raw=true" width="200" height="200"></div>
-    <div id="photo5" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%98.jpg?raw=true" width="200" height="200"></div>
-    <div id="photo6" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/slide_show_files/%E3%83%86%E3%83%8B%E3%82%B9100-2.jpg?raw=true" width="200" height="200"></div>
+    <div id="photo1" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%91%EF%BC%90.jpg" width="200" height="200"></div>
+    <div id="photo2" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%96.jpg" width="200" height="200"></div>
+    <div id="photo3" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%91%EF%BC%93.jpg" width="200" height="200"></div>
+    <div id="photo4" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%91%EF%BC%91.jpg" width="200" height="200"></div>
+    <div id="photo5" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%98.jpg" width="200" height="200"></div>
+    <div id="photo6" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/slide_show_files/%E3%83%86%E3%83%8B%E3%82%B9100-2.jpg" width="200" height="200"></div>
 </div></div>
 </html>
