--- a/slide2.html
+++ b/slide2.html
@@ -17,4 +17,5 @@
     <div id="photo5" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9%EF%BC%98.jpg" width="200" height="200"></div>
     <div id="photo6" class="photo"><img src="https://github.com/Ikumi19372/momo/blob/main/images/slide_show_files/%E3%83%86%E3%83%8B%E3%82%B9100-2.jpg" width="200" height="200"></div>
 </div></div>
+  </body>
 </html>
