--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
 	<link rel="stylesheet" type="text/css" href="https://github.com/Ikumi19372/momo/blob/main/kaken.css?raw=true">
 	 <link rel="stylesheet" type="text/css" href="https://github.com/Ikumi19372/momo/blob/main/slide.css?raw=true">
- <script src="test.js"></script>
+ <script src="https://github.com/Ikumi19372/momo/blob/main/test.js?raw=true"></script>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
