--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
  
   </style>
   
-	<link rel="stylesheet" type="text/css" href="https://github.com/Ikumi19372/momo/blob/main/kaken.css">
-	 <link rel="stylesheet" type="text/css" href="https://github.com/Ikumi19372/momo/blob/main/slide.css">
- <script src="https://github.com/Ikumi19372/momo/blob/main/test.js"></script>
+	<link rel="stylesheet" type="text/css" href="kaken.css">
+	 <link rel="stylesheet" type="text/css" href="slide.css">
+ <script src="test.js"></script>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
