--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
 	<link rel="stylesheet" type="text/css" href="kaken.css">
 	 <link rel="stylesheet" type="text/css" href="slide.css">
- <script src="test.js"></script>
+ <script src="kaken.js"></script>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
