--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
 	<link rel="stylesheet" type="text/css" href="kaken.css">
 	 <link rel="stylesheet" type="text/css" href="slide.css">
- <script src="kaken.js"></script>
+ <script src="kaken.js">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
@@ -174,7 +174,7 @@ display: flex; align-items: center;
 
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-
+		</script>
 </body>
 </html>
 		
