--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ display: flex; align-items: center;
       <section class="area" id="area-5">
 		
 		<h1 style="text-align:left">部長挨拶</h1>
-		<p><span class="blurTrigger">　僕たち水戸工業高校ソフトテニス部は、顧問の先生のご指導のもと、日々練習に励んでいます。</span></p>
+		<p><span>　僕たち水戸工業高校ソフトテニス部は、顧問の先生のご指導のもと、日々練習に励んでいます。</span></p>
 		<p><span class="blurTrigger">令和元年度の新人大会水戸地区予選では、個人戦２ペアが県大会に出場することができました。</span></p>
 		<p><span class="blurTrigger">しかし、県大会では個人戦も団体戦も他地区の学校のレベルの高さを痛感し、自分の力を出せず、</span></p>
 		<p><span class="blurTrigger">何も活躍できないまま悔しい結果に終わってしまいました。この結果に、試合に勝つために</span></p>
