--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@ display: flex; align-items: center;
 		<p><span class="bfade-in-text">令和元年度の新人大会水戸地区予選では、個人戦２ペアが県大会に出場することができました。</span></p>
 		<p><span class="fade-in-text">しかし、県大会では個人戦も団体戦も他地区の学校のレベルの高さを痛感し、自分の力を出せず、</span></p>
 		<p><span class="fade-in-text">何も活躍できないまま悔しい結果に終わってしまいました。この結果に、試合に勝つために</span></p>
-		<p><span class="fade-in-text">自分達で考えた練習法を取り入れ、部員全員が最後まで気持ちを切らせることなく取り組んできました。</span></p>
-		<p><span class="fade-in-text">３年生となってむかえる最後の大会では、<span class="marker">個人戦、団体戦ともに優勝</span>を目指し、</span></p>
+		<p><span class="blurTrigger">自分達で考えた練習法を取り入れ、部員全員が最後まで気持ちを切らせることなく取り組んできました。</span></p>
+		<p><span class="blurTrigger">３年生となってむかえる最後の大会では、<span class="marker">個人戦、団体戦ともに優勝</span>を目指し、</span></p>
 		<p><span class="blurTrigger">今までご指導していただいた顧問の先生やコーチ、そして今まで一緒に練習してきた仲間たちみんなで喜び合えるように、ソフトテニス部全員で頑張っていきたいと思います。</span></p>
 		</section><font size="6">
 		<a href="https://github.com/Ikumi19372/momo/blob/main/slide2.html?raw=true">・ソフトテニス部スライドショーはこちら</a></font>
