--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WZKE27WXYB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WZKE27WXYB');
+</script>
+	
     <meta charset="utf-8">
 	<title>水戸工業ソフトテニス部</title>
 	 <style>
