--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </style>
    <script src="kaken.js"></script>
 	<link rel="stylesheet" type="text/css" href="kaken.css">
-	 <link rel="stylesheet" type="text/css" href="slide.css">
+	 <link rel="stylesheet" type="text/css" href="slide2.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
